[package]
name = "soup"
version = "0.1.0"
authors = ["WhizSid <whizsid@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.soup-sys]
path = "soup-sys-rs"